--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 			// 网址数据 卡片
             {
                 title: "deepseek API调用及本地部署教程",
-                link: "https://kevinludashi.github.io/WZSCyinshipinziyuan/",
+                link: "https://kevinludashi.github.io/kevinludashiDEEPSEEK/",
                 description: "deepseek的API调用和本地部署的方法和教程。",
                 tags: ["全部", "#AI", "#部署教程"]
             },
